--- a/SS/WZDH/kjj.css
+++ b/SS/WZDH/kjj.css
@@ -1,6 +1,6 @@
 body{
  font-size: 18px; background: #f4f8fb; overflow-x:hidden;   
-     background: #000 url(images/KJJ3.png) center top ;
+     background: #000 url(images/KJJ.png) center top ;
      background-attachment:fixed;
      background-size:100% 100%;  
 filter:"progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod='scale')";  
